# seto_scararobot2

./: LICENSE  README.md  seto_scararobot2.sh
beads_setter/: CMakeLists.txt  LICENSE  README.md  beads_setter.py  beads_setter_test.py  package.xml  setup.cfg  setup.py
beads_setter/flask_topics/: beads_setter.py
beads_setter/flask_topics/templates/: index.html
beads_setter/static/: beads_setter.css  beads_setter.js
documents/: アームの動作エリア.pptx  ビーズの操作エリア.xlsx
seto_scararobot2/: CMakeLists.txt  package.xml
seto_scararobot2/config/: ez_pub_beads_position.yaml
seto_scararobot2/include/seto_scararobot2/: seto_scararobot2.hpp
seto_scararobot2/launch/: move_arm_gazebo.launch  move_arm_hardware.launch  move_test1_1_rviz.py  move_test1_rviz.launch  move_test2_rviz.launch  move_test2_rviz.py  seto_scararobot2.py
seto_scararobot2/scripts/: test_arm.py
seto_scararobot2/src/: move_arm.cpp  move_arm2.cpp  move_arm_dynamixel2.cpp  move_arm_dynamixel2_gazebo.cpp  move_test1.cpp  move_test1_1.cpp  move_test2.cpp  seto_scararobot2.cpp
seto_scararobot2_control/: CMakeLists.txt  package.xml
seto_scararobot2_control/config/: _controllers.yaml  _controllers_moveit.yaml  controllers.yaml  controllers_moveit.yaml
seto_scararobot2_description/: CMakeLists.txt  package.xml
seto_scararobot2_description/launch/: display.launch  display_dynamixel_sync.launch  seto_scararobot2.rviz
seto_scararobot2_description/meshes/: arm1.stl  arm2.stl  base.stl  endpoint.stl
seto_scararobot2_description/rviz/: seto_scararobot2.rviz
seto_scararobot2_description/urdf/: seto_scararobot2.urdf
seto_scararobot2_dynamixel/: CMakeLists.txt  package.xml
seto_scararobot2_dynamixel/config/: seto_scararobot2.yaml
seto_scararobot2_dynamixel/launch/: dynamixel_controllers.launch
setoros_BeadsEE/: CMakeLists.txt  LICENCE  README.drawio  README.md  package.xml  setup.cfg  setup.py
setoros_BeadsEE/arduino/BeadsEE/: .gitignore  BeadsEE.ino  CommI2c.cpp  CommI2c.h  CommSer.cpp  CommSer.h  Config.h  LICENSE  README.md  Sequence.cpp  Sequence.h  ServoAcc.cpp  ServoAcc.h  StatusLed.cpp  StatusLed.h
setoros_BeadsEE/arduino/IOBoard/: BeadsEe-cache.lib  BeadsEe.kicad_pcb  BeadsEe.pro  BeadsEe.sch  README.md
setoros_BeadsEE/arduino/IOBoard/gerber/: BeadsEe.GBL  BeadsEe.GBO  BeadsEe.GBP  BeadsEe.GBS  BeadsEe.GML  BeadsEe.GTL  BeadsEe.GTO  BeadsEe.GTP  BeadsEe.GTS  BeadsEe.drl
setoros_BeadsEE/launch/: beadsee.launch  beadsee_dummy.launch
setoros_BeadsEE/node/: BeadsEe.py  BeadsEeSerial.py  BeadsEe_dummy.py  controlsample.py
setoros_BeadsEE/script/: BeadsEeSerial.py  BeadsEe_dummy.py
