<?xml version="1.0"?>
<package format="3">
  <name>beads_setter</name>
  <version>1.0.0</version>
  <description>The beads_setter package</description>
  <maintainer email="70ayatakano@gmail.com">Naotaka Kawata</maintainer>
  <license>Apache License 2.0</license>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python-flask</exec_depend>
  <exec_depend>os</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>