<?xml version="1.0"?>
<package format="3">
  <name>seto_scararobot2_description</name>
  <version>0.0.0</version>
  <description>The seto_scararobot2_description package</description>

  <maintainer email="hirokazu@dream-drive.net">SETOUCHI ROS STUDY GROUP</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>urdf</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
